--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   adaptive_dialog: ^1.9.0-x-macos-beta.1
+  any_link_preview: any
   animations: ^2.0.7
   archive: ^3.3.9
   badges: ^3.1.1
