--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -25,34 +25,34 @@ jobs:
       - run: flutter analyze
       - run: flutter test
 
-  build_debug_apk:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cat .github/workflows/versions.env >> $GITHUB_ENV
-      - uses: actions/setup-java@v1
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-          cache: true
-      - run: flutter pub get
-      - run: flutter build apk --debug
+  # build_debug_apk:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: cat .github/workflows/versions.env >> $GITHUB_ENV
+  #     - uses: actions/setup-java@v1
+  #       with:
+  #         java-version: ${{ env.JAVA_VERSION }}
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: ${{ env.FLUTTER_VERSION }}
+  #         cache: true
+  #     - run: flutter pub get
+  #     - run: flutter build apk --debug
 
-  build_debug_web:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cat .github/workflows/versions.env >> $GITHUB_ENV
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-          cache: true
-      - run: flutter pub get
-      - name: Prepare web
-        run: ./scripts/prepare-web.sh
-      - run: flutter build web
+  # build_debug_web:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: cat .github/workflows/versions.env >> $GITHUB_ENV
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: ${{ env.FLUTTER_VERSION }}
+  #         cache: true
+  #     - run: flutter pub get
+  #     - name: Prepare web
+  #       run: ./scripts/prepare-web.sh
+  #     - run: flutter build web
 
   build_debug_linux:
     runs-on: ubuntu-latest
@@ -68,16 +68,16 @@ jobs:
       - run: flutter pub get
       - run: flutter build linux --target-platform linux-x64
 
-  build_debug_ios:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cat .github/workflows/versions.env >> $GITHUB_ENV
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-          cache: true
-      - name: Setup Xcode version
-        uses: maxim-lobanov/setup-xcode@v1.5.1
-      - run: flutter pub get
-      - run: flutter build ios --no-codesign
+  # build_debug_ios:
+  #   runs-on: macos-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: cat .github/workflows/versions.env >> $GITHUB_ENV
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: ${{ env.FLUTTER_VERSION }}
+  #         cache: true
+  #     - name: Setup Xcode version
+  #       uses: maxim-lobanov/setup-xcode@v1.5.1
+  #     - run: flutter pub get
+  #     - run: flutter build ios --no-codesign
