--- a/.github/workflows/main_deploy.yaml
+++ b/.github/workflows/main_deploy.yaml
@@ -1,80 +1,80 @@
 name: Main Deploy Workflow
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - release
 
-concurrency:
-  group: main_deploy
-  cancel-in-progress: true
+# concurrency:
+#   group: main_deploy
+#   cancel-in-progress: true
 
-jobs:
-  deploy_web:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cat .github/workflows/versions.env >> $GITHUB_ENV
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-          cache: true
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install nodejs -y
-      - run: flutter pub get
-      - name: Prepare web
-        run: ./scripts/prepare-web.sh
-      - name: Build Release Web
-        run: flutter build web --release --verbose --source-maps --base-href "/web/"
-      - name: Build Website
-        run: |
-          cd docs && npx tailwindcss -o ./tailwind.css --minify && cd ..
-          mv docs public
-          mv repo public || true
-          mv build/web/ public/web
-          echo "fluffychat.im" > ./public/CNAME
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          personal_token: ${{ secrets.PAGES_DEPLOY_TOKEN }}
-          publish_dir: ./public
-          publish_branch: gh-pages
+# jobs:
+#   deploy_web:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - run: cat .github/workflows/versions.env >> $GITHUB_ENV
+#       - uses: subosito/flutter-action@v2
+#         with:
+#           flutter-version: ${{ env.FLUTTER_VERSION }}
+#           cache: true
+#       - name: Install dependencies
+#         run: sudo apt-get update && sudo apt-get install nodejs -y
+#       - run: flutter pub get
+#       - name: Prepare web
+#         run: ./scripts/prepare-web.sh
+#       - name: Build Release Web
+#         run: flutter build web --release --verbose --source-maps --base-href "/web/"
+#       - name: Build Website
+#         run: |
+#           cd docs && npx tailwindcss -o ./tailwind.css --minify && cd ..
+#           mv docs public
+#           mv repo public || true
+#           mv build/web/ public/web
+#           echo "fluffychat.im" > ./public/CNAME
+#       - name: Deploy to GitHub Pages
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           personal_token: ${{ secrets.PAGES_DEPLOY_TOKEN }}
+#           publish_dir: ./public
+#           publish_branch: gh-pages
 
-  deploy_playstore_internal:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cat .github/workflows/versions.env >> $GITHUB_ENV
-      - uses: actions/setup-java@v1
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-          cache: true
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7
-      - name: Install Fastlane
-        run: gem install fastlane -NV
-      - name: Apply Google Services Patch
-        run: git apply ./scripts/enable-android-google-services.patch
-      - run: flutter pub get
-      - name: Prepare Android Release Build
-        env:
-          FDROID_KEY: ${{ secrets.FDROID_KEY }}
-          FDROID_KEY_PASS: ${{ secrets.FDROID_KEY_PASS }}
-          PLAYSTORE_DEPLOY_KEY: ${{ secrets.PLAYSTORE_DEPLOY_KEY }}
-        run: ./scripts/prepare-android-release.sh
-      - name: Build Android Release
-        run: flutter build appbundle --target-platform android-arm,android-arm64,android-x64
-      - name: Deploy Android Release
-        run: |
-          mkdir -p build/android
-          cp build/app/outputs/bundle/release/app-release.aab build/android/
-          cd android
-          bundle install
-          bundle update fastlane
-          bundle exec fastlane deploy_internal_test
-          cd ..
+#   deploy_playstore_internal:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - run: cat .github/workflows/versions.env >> $GITHUB_ENV
+#       - uses: actions/setup-java@v1
+#         with:
+#           java-version: ${{ env.JAVA_VERSION }}
+#       - uses: subosito/flutter-action@v2
+#         with:
+#           flutter-version: ${{ env.FLUTTER_VERSION }}
+#           cache: true
+#       - name: Set up Ruby
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: 2.7
+#       - name: Install Fastlane
+#         run: gem install fastlane -NV
+#       - name: Apply Google Services Patch
+#         run: git apply ./scripts/enable-android-google-services.patch
+#       - run: flutter pub get
+#       - name: Prepare Android Release Build
+#         env:
+#           FDROID_KEY: ${{ secrets.FDROID_KEY }}
+#           FDROID_KEY_PASS: ${{ secrets.FDROID_KEY_PASS }}
+#           PLAYSTORE_DEPLOY_KEY: ${{ secrets.PLAYSTORE_DEPLOY_KEY }}
+#         run: ./scripts/prepare-android-release.sh
+#       - name: Build Android Release
+#         run: flutter build appbundle --target-platform android-arm,android-arm64,android-x64
+#       - name: Deploy Android Release
+#         run: |
+#           mkdir -p build/android
+#           cp build/app/outputs/bundle/release/app-release.aab build/android/
+#           cd android
+#           bundle install
+#           bundle update fastlane
+#           bundle exec fastlane deploy_internal_test
+#           cd ..
