--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,71 +9,71 @@ concurrency:
   group: release_workflow
   cancel-in-progress: true
 
-jobs:
-  build_web:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cat .github/workflows/versions.env >> $GITHUB_ENV
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-          cache: true
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install nodejs -y
-      - run: flutter pub get
-      - name: Prepare web
-        run: ./scripts/prepare-web.sh
-      - name: Build Release Web
-        run: flutter build web --release --source-maps
-      - name: Create archive
-        run: tar -czf fluffychat-web.tar.gz build/web/
-      - name: Upload Web Build
-        uses: actions/upload-artifact@v2
-        with:
-          name: Web Build
-          path: fluffychat-web.tar.gz
-      - name: Upload to release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAGES_DEPLOY_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: fluffychat-web.tar.gz
-          asset_name: fluffychat-web.tar.gz
-          asset_content_type: application/gzip
+# jobs:
+#   build_web:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - run: cat .github/workflows/versions.env >> $GITHUB_ENV
+#       - uses: subosito/flutter-action@v2
+#         with:
+#           flutter-version: ${{ env.FLUTTER_VERSION }}
+#           cache: true
+#       - name: Install dependencies
+#         run: sudo apt-get update && sudo apt-get install nodejs -y
+#       - run: flutter pub get
+#       - name: Prepare web
+#         run: ./scripts/prepare-web.sh
+#       - name: Build Release Web
+#         run: flutter build web --release --source-maps
+#       - name: Create archive
+#         run: tar -czf fluffychat-web.tar.gz build/web/
+#       - name: Upload Web Build
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: Web Build
+#           path: fluffychat-web.tar.gz
+#       - name: Upload to release
+#         uses: actions/upload-release-asset@v1
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.PAGES_DEPLOY_TOKEN }}
+#         with:
+#           upload_url: ${{ github.event.release.upload_url }}
+#           asset_path: fluffychat-web.tar.gz
+#           asset_name: fluffychat-web.tar.gz
+#           asset_content_type: application/gzip
 
-  build_apk:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cat .github/workflows/versions.env >> $GITHUB_ENV
-      - uses: actions/setup-java@v1
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-          cache: true
-      - name: Apply Google Services Patch
-        run: git apply ./scripts/enable-android-google-services.patch
-      - run: flutter pub get
-      - name: Prepare Android Release Build
-        env:
-          FDROID_KEY: ${{ secrets.FDROID_KEY }}
-          FDROID_KEY_PASS: ${{ secrets.FDROID_KEY_PASS }}
-          PLAYSTORE_DEPLOY_KEY: ${{ secrets.PLAYSTORE_DEPLOY_KEY }}
-        run: ./scripts/prepare-android-release.sh
-      - run: flutter build apk --release
-      - name: Upload to release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAGES_DEPLOY_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: build/app/outputs/apk/release/app-release.apk
-          asset_name: fluffychat.apk
-          asset_content_type: application/vnd.android.package-archive
+  # build_apk:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: cat .github/workflows/versions.env >> $GITHUB_ENV
+  #     - uses: actions/setup-java@v1
+  #       with:
+  #         java-version: ${{ env.JAVA_VERSION }}
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: ${{ env.FLUTTER_VERSION }}
+  #         cache: true
+  #     - name: Apply Google Services Patch
+  #       run: git apply ./scripts/enable-android-google-services.patch
+  #     - run: flutter pub get
+  #     - name: Prepare Android Release Build
+  #       env:
+  #         FDROID_KEY: ${{ secrets.FDROID_KEY }}
+  #         FDROID_KEY_PASS: ${{ secrets.FDROID_KEY_PASS }}
+  #         PLAYSTORE_DEPLOY_KEY: ${{ secrets.PLAYSTORE_DEPLOY_KEY }}
+  #       run: ./scripts/prepare-android-release.sh
+  #     - run: flutter build apk --release
+  #     - name: Upload to release
+  #       uses: actions/upload-release-asset@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.PAGES_DEPLOY_TOKEN }}
+  #       with:
+  #         upload_url: ${{ github.event.release.upload_url }}
+  #         asset_path: build/app/outputs/apk/release/app-release.apk
+  #         asset_name: fluffychat.apk
+  #         asset_content_type: application/vnd.android.package-archive
 
   build_linux:
     runs-on: ubuntu-latest
@@ -99,50 +99,76 @@ jobs:
           asset_path: fluffychat-linux-x64.tar.gz
           asset_name: fluffychat-linux-x64.tar.gz
           asset_content_type: application/gzip
-
-  deploy_playstore:
-    runs-on: ubuntu-latest
+          
+  build_windows:
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - run: cat .github/workflows/versions.env >> $GITHUB_ENV
-      - uses: actions/setup-java@v1
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
           cache: true
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7
-      - name: Install Fastlane
-        run: gem install fastlane -NV
-      - name: Apply Google Services Patch
-        run: git apply ./scripts/enable-android-google-services.patch
+      - name: Install dependencies
       - run: flutter pub get
-      - name: Prepare Android Release Build
+      - run: flutter config --enable-windows-desktop
+      - run: flutter build windows --release
+      - name: Create archive
+        run: zip fluffychat-windows-x64.zip -C build/windows/x64/release/bundle/*
+      - name: Upload to release
+        uses: actions/upload-release-asset@v1
         env:
-          FDROID_KEY: ${{ secrets.FDROID_KEY }}
-          FDROID_KEY_PASS: ${{ secrets.FDROID_KEY_PASS }}
-          PLAYSTORE_DEPLOY_KEY: ${{ secrets.PLAYSTORE_DEPLOY_KEY }}
-        run: ./scripts/prepare-android-release.sh
-      - name: Build Android Release
-        run: flutter build appbundle --target-platform android-arm,android-arm64,android-x64
-      - name: Get Tag Name
-        id: tag_name
-        run: echo "::set-output name=tag::$(echo ${GITHUB_REF#refs/tags/})"
-      - name: Deploy Android Release
-        run: |
-          mkdir -p build/android
-          cp build/app/outputs/bundle/release/app-release.aab build/android/
-          cd android
-          bundle install
-          bundle update fastlane
-          bundle exec fastlane deploy_internal_test
-          if [[ $GITHUB_REF_NAME == rc* ]]; then
-              bundle exec fastlane deploy_candidate
-          else
-              bundle exec fastlane deploy_release
-          fi
-          cd ..
+          GITHUB_TOKEN: ${{ secrets.PAGES_DEPLOY_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: fluffychat-windows-x64.zip
+          asset_name: fluffychat-windows-x64.zip
+          asset_content_type: application/gzip
+
+
+  # deploy_playstore:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: cat .github/workflows/versions.env >> $GITHUB_ENV
+  #     - uses: actions/setup-java@v1
+  #       with:
+  #         java-version: ${{ env.JAVA_VERSION }}
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: ${{ env.FLUTTER_VERSION }}
+  #         cache: true
+  #     - name: Set up Ruby
+  #       uses: ruby/setup-ruby@v1
+  #       with:
+  #         ruby-version: 2.7
+  #     - name: Install Fastlane
+  #       run: gem install fastlane -NV
+  #     - name: Apply Google Services Patch
+  #       run: git apply ./scripts/enable-android-google-services.patch
+  #     - run: flutter pub get
+  #     - name: Prepare Android Release Build
+  #       env:
+  #         FDROID_KEY: ${{ secrets.FDROID_KEY }}
+  #         FDROID_KEY_PASS: ${{ secrets.FDROID_KEY_PASS }}
+  #         PLAYSTORE_DEPLOY_KEY: ${{ secrets.PLAYSTORE_DEPLOY_KEY }}
+  #       run: ./scripts/prepare-android-release.sh
+  #     - name: Build Android Release
+  #       run: flutter build appbundle --target-platform android-arm,android-arm64,android-x64
+  #     - name: Get Tag Name
+  #       id: tag_name
+  #       run: echo "::set-output name=tag::$(echo ${GITHUB_REF#refs/tags/})"
+  #     - name: Deploy Android Release
+  #       run: |
+  #         mkdir -p build/android
+  #         cp build/app/outputs/bundle/release/app-release.aab build/android/
+  #         cd android
+  #         bundle install
+  #         bundle update fastlane
+  #         bundle exec fastlane deploy_internal_test
+  #         if [[ $GITHUB_REF_NAME == rc* ]]; then
+  #             bundle exec fastlane deploy_candidate
+  #         else
+  #             bundle exec fastlane deploy_release
+  #         fi
+  #         cd ..
