Add fallback for certain URLs and style previews

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   just_audio: ^0.9.30
   keyboard_shortcuts: ^0.1.4
   latlong2: ^0.8.1
+  link_preview_generator: any
   linkify: ^5.0.0
   matrix: ^0.22.3
   matrix_homeserver_recommendations: ^0.3.0
