--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ dependencies:
   video_player: ^2.2.18
   wakelock_plus: ^1.1.1
   webrtc_interface: ^1.0.13
+  youtube_player_flutter: any
 
 dev_dependencies:
   dart_code_metrics: ^5.7.5
